[gd_scene load_steps=5 format=2]

[ext_resource path="res://NoteGUI.gd" type="Script" id=1]
[ext_resource path="res://icons/id-card-glow.png" type="Texture" id=2]
[ext_resource path="res://icons/thumbtack.png" type="Texture" id=3]
[ext_resource path="res://icons/thumbtackPressed.png" type="Texture" id=4]

[node name="NoteGUI" type="WindowDialog"]
visible = true
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 60 )
script = ExtResource( 1 )

[node name="IconBar" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = -46.0
margin_right = 14.0
margin_bottom = -30.0
rect_min_size = Vector2( 0, 32 )

[node name="MarginContainer" type="MarginContainer" parent="IconBar"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="TitleIcon" type="TextureRect" parent="IconBar/MarginContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer2" type="MarginContainer" parent="IconBar"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="PinIcon" type="TextureButton" parent="IconBar/MarginContainer2"]
margin_right = 32.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="NoteName" type="LineEdit" parent="."]
margin_top = -21.0
margin_right = 200.0
margin_bottom = 3.0
focus_neighbour_left = NodePath("../NoteContents/NoteText")
focus_neighbour_top = NodePath("../NoteContents/NoteText")
focus_neighbour_right = NodePath("../NoteContents/NoteText")
focus_neighbour_bottom = NodePath("../NoteContents/NoteText")
focus_next = NodePath("../NoteContents/NoteText")
focus_previous = NodePath("../NoteContents/NoteText")
caret_blink = true

[node name="NoteContents" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="NoteText" type="TextEdit" parent="NoteContents"]
margin_right = 190.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 140 )
hiding_enabled = 1
wrap_enabled = true

[node name="TempPinTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Overlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -19.0
rect_pivot_offset = Vector2( 33.2001, 17.579 )
color = Color( 0.572549, 0.513726, 0.0352941, 0.231373 )

[connection signal="gui_input" from="." to="." method="_on_NoteGUI_gui_input"]
[connection signal="gui_input" from="IconBar/MarginContainer/TitleIcon" to="." method="_on_TitleIcon_gui_input"]
[connection signal="toggled" from="IconBar/MarginContainer2/PinIcon" to="." method="_on_PinIcon_toggled"]
[connection signal="text_entered" from="NoteName" to="." method="_on_NoteName_text_entered"]
[connection signal="mouse_entered" from="NoteContents/NoteText" to="." method="_on_NoteText_mouse_entered"]
[connection signal="mouse_exited" from="NoteContents/NoteText" to="." method="_on_NoteText_mouse_exited"]
[connection signal="gui_input" from="Overlay" to="." method="_on_Overlay_gui_input"]
